- Fixed sidebar color and table double border

--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -477,8 +477,8 @@ th[align=center] {
     .checkbox {
       display: inline;
       float: left;
-      margin-top: 0;
-      margin-bottom: 0;
+      margin-top: 0 !important;
+      margin-bottom: 0 !important;
     }
 
     .actions {
